# Marie

./: .gitignore  LICENSE  README.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  requirements.md  tasks.md
examples/: make_demo.py
marie/: cache.py  classifier.py  cli.py  config.py  executor.py  extractor.py  llm.py  models.py  pipeline.py  planner.py  scanner.py  watcher.py
tests/: test_config.py  test_llm.py  test_pipeline.py  test_planner.py  test_watcher.py
