[project]
name = "marie-tidy"
version = "0.1.0"
description = "用 AI 整理任何文件夹:读懂内容,自动分类、重命名、归档"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["typer>=0.9", "rich>=13"]

[project.optional-dependencies]
extract = ["pypdf>=4", "python-docx>=1"]   # 内容提取(周末2 LLM 用)
# llm = ["litellm>=1.0", "pydantic>=2"]     # 周末2:接入大模型

[project.scripts]
marie = "marie.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marie"]
