[project]
name = "marie-tidy"
version = "0.1.0"
description = "用 AI 整理任何文件夹:读懂内容,自动分类、重命名、归档"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["typer>=0.9", "rich>=13", "pyyaml>=6", "watchdog>=3"]

[project.optional-dependencies]
extract = ["pypdf>=4", "python-docx>=1"]   # 内容提取
llm = ["openai>=1.0"]                       # LLM 分类(OpenAI 兼容接口,支持 Qwen/Ollama)
vision = ["pillow>=10"]                     # 图片压缩(多模态看图分类)

[project.scripts]
marie = "marie.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["marie"]
